--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       }
       localStorage.setItem("nombre", nombre);
       localStorage.setItem("genero", genero);
-      window.location.href = "index.html";
+      window.location.href = "juego.html";
     }
   </script>
 </body>
